# Python-Web

modul_1_1/assistant_bot/: addressbook.py  console.py
modul_1_1/assistant_bot/assistant_bot/: abs_interface.py  addressbook.py  functions.py  record.py
modul_2/: pyproject.toml  setup.py
pa-docker/: Dockerfile
pythonProjectWithPoetry/: pyproject.toml
