[tool.poetry]
name = "pythonprojectwithpoetry"
version = "0.1.0"
description = ""
authors = ["Roman Pimonov <111997187+PIRomanCod@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.18.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
